Fix social image size on mobile and remove s.

--- a/src/components/Offices/offices.modules.scss
+++ b/src/components/Offices/offices.modules.scss
@@ -142,7 +142,11 @@
         }
 
         img {
-            height: 20px;
+            height: 33px;
+            
+            @include for-size('tablet') {
+                height: 20px;
+            }
         }
     }
 }
